tests/run/error_copy_struct.out
tests/run/error_copy_struct.em:12:12: error: type argument is not Copy — only scalars, strings, enums, and closures satisfy a 'Copy' bound (not a struct or array)
